add opens to fix hibernate reflection